--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "double-pendulum.py"]
 	path = double-pendulum.py
 	url = https://github.com/vincentmader/double-pendulum.py
+[submodule "random-walk-live.py"]
+	path = random-walk-live.py
+	url = https://github.com/vincentmader/random-walk-live.py
