--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "double-pendulum.py"]
 	path = double-pendulum.py
 	url = https://github.com/vincentmader/double-pendulum.py
-[submodule "random-walk-live.py"]
-	path = random-walk-live.py
-	url = https://github.com/vincentmader/random-walk-live.py
+[submodule "live-random-walk.py"]
+	path = live-random-walk.py
+	url = https://github.com/vincentmader/live-random-walk.py
